test_suite5/ALAN/test_suite/alan-2022-examples/failing/004550_mutation.alan
source W begin leave false + end
